configure date conversions v2 -- config